--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-    <title>BOOTSTRAO</title>
+    <title>Notas</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/archive.svg" type="image/x-icon">
 </head>
 <body>
 
@@ -19,6 +20,11 @@
                 Você não possuí notas. Adicione clicando no botão "Adicionar nota"
                 <i class="bi bi-emoji-smile-fill"></i>
             </div>
+
+            <div id="alerta-criando-nota" class="alert alert-success" role="alert">
+                Vamos adicionar sua primeira nota
+                <i class="bi bi-emoji-smile-fill"></i>
+              </div>
             <form id="formulario">
                 <div class="form-group mt-4">
                   <label for="formGroupExampleInput">Digite o nome da nota</label>
@@ -47,6 +53,24 @@
 
         </div>
     </div>
+  
+    <div class="modal fade" id="fade" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header d-flex justify-content-between">
+            <h5 class="modal-title" id="TituloModalCentralizado">Exluir</h5>
+
+            </div>
+            <div class="modal-body">
+            Deseja remover a nota? Ela será removida permanentemente.
+            </div>
+            <div class="modal-footer">
+            <button id="closeModal" type="button" class="btn btn-secondary" data-dismiss="modal">Voltar</button>
+            <button id="excluir" type="button" class="btn btn-primary">Remover</button>
+            </div>
+        </div>
+        </div>
+  </div>
 
     <script src="script.js"></script>
     
