--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div class="container-fluid d-flex justify-content-center mt-3 flex-column max-w-custom">
+    <div class="container-fluid d-flex justify-content-center mt-3 flex-column max-w-custom efeito-custom">
         <div class="section1">
             <div id="alerta-sem-notas" class="alert alert-primary mt-2" role="alert">
                 Você não possuí notas. Adicione clicando no botão "Adicionar nota"
@@ -44,7 +44,7 @@
               <button id="voltar" type="button" class="btn btn-primary mt-3 2-1 w-100">Voltar</button>
         </div>
 
-        <div class="section2">
+        <div class="section2 efeito-custom-sessao2">
 
             <div class="alert alert-light mt-3" role="alert">
                 Suas notas:
