--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
 </head>
 <body>
 
-    <div class="container-fluid d-flex justify-content-center mt-3 flex-column max-w-custom efeito-custom">
+    <div id="page" class="container-fluid d-flex justify-content-center mt-3 flex-column max-w-custom efeito-custom">
+        <div id="containerModoClaro" class="d-flex align-items-center">
+            <i id="modoClaro" class="bi bi-sun"></i>
+            <span id="textoModoClaro"></span>
+        </div>
+        <div id="containerModoEscuro" class="d-flex align-items-center">
+            <i id="modoEscuro" class="bi bi-sun-fill"></i>
+            <span id="textoModoEscuro"></span>
+        </div>
         <div class="section1">
             <div id="alerta-sem-notas" class="alert alert-primary mt-2" role="alert">
                 Você não possuí notas. Adicione clicando no botão "Adicionar nota"
                 <i class="bi bi-emoji-smile-fill"></i>
             </div>
 
-            <div id="alerta-criando-nota" class="alert alert-success" role="alert">
+            <div id="alerta-criando-nota" class="alert alert-success mt-3" role="alert">
                 Vamos adicionar sua primeira nota
                 <i class="bi bi-emoji-smile-fill"></i>
               </div>
