--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div id="page" class="container-fluid d-flex justify-content-center mt-3 flex-column max-w-custom efeito-custom">
         <div id="containerModoClaro" class="d-flex align-items-center">
             <i id="modoClaro" class="bi bi-sun"></i>
-            <span id="textoModoClaro">Light</span>
+            <span id="textoModoClaro">Dark</span>
         </div>
         <div id="containerModoEscuro" class="d-flex align-items-center">
             <i id="modoEscuro" class="bi bi-sun-fill"></i>
-            <span id="textoModoEscuro">Dark</span>
+            <span id="textoModoEscuro">Light</span>
         </div>
         <div class="section1">
             <div id="alerta-sem-notas" class="alert alert-primary mt-2" role="alert">
