--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
             </div>
 
 
+            <label class="mt-3 mb-2" for="campoBusca">Pesquisar</label>
+            <input id="campoBusca" class="form-control mb-3" type="text" placeholder="Buscar por nome ou idade">
+            <p id="mensagemNotaNaoEncontrada">Nenhuma nota encontrada</p>
+
+            <div id="listaNotas">
+
+            </div>
         </div>
     </div>
   
